Finished work on AuthSub

--- a/webgcal/templates/base.html
+++ b/webgcal/templates/base.html
@@ -22,12 +22,12 @@
   <meta name="keywords" content="calendar,icalendar,hcalendar,google" />
   <meta name="revisit" content="after 1 days" />
   <meta name="revisit-after" content="1 days" />
-  <meta name="verify-v1" content="0KSH28p2ZTWJMh5p5RFtqPlMAY3wys9TU9eJidnsFsg=" />
+  <meta name="google-site-verification" content="CIs69bW4XfyN1SR9Gc3_Xn7eDFFRnjUuQbdhW_W8BGg" />
 
   <script type="text/javascript" src="{{ STATICFILES_URL }}jquery-1.4.2.min.js"></script>
   <script type="text/javascript" src="{{ STATICFILES_URL }}jquery.datetime.js"></script>
   <script type="text/javascript">
-    //var _gaq = _gaq || []; _gaq.push(['_setAccount', 'UA-2841986-5']); _gaq.push(['_trackPageview']);
+    var _gaq = _gaq || []; _gaq.push(['_setAccount', 'UA-2841986-9']); _gaq.push(['_trackPageview']);
   </script>
 {% endblock %}
 
