--- a/webgcal/templates/base.html
+++ b/webgcal/templates/base.html
@@ -15,10 +15,6 @@
   <meta name="distribution" content="global" />
   <meta name="audience" content="all" />
   <meta name="robots" content="index, follow, noarchive" />
-  <meta name="domain" content="Calendar Series" />
-  <meta name="author" content="Calendar Series" />
-  <meta name="publisher" content="Calendar Series" />
-  <meta name="copyright" content="Calendar Series" />
   <meta name="keywords" content="calendar,icalendar,hcalendar,google" />
   <meta name="revisit" content="after 1 days" />
   <meta name="revisit-after" content="1 days" />
@@ -41,7 +37,8 @@
 {% endblock %}
 
 {% block header %}
-  <h3>Calendar Series</h3>
+  <h3>WebGCal</h3>
+  <h4>Add hCalendar events to your Google Calendar</h4>
 {% endblock %}
 
 {% block footer %}
