--- a/webgcal/templates/show_dashboard.html
+++ b/webgcal/templates/show_dashboard.html
@@ -50,7 +50,7 @@
         <td>{{ website.name }}</td>
         <td>{{ website.href|slice:":40" }} ...</td>
         <td>{% if website.update %}{{ website.update|localedatetime }}{% else %}None{% endif %}</td>
-        <td>{% if website.running %}<img src="{{ STATICFILES_URL }}icons/loading.gif" alt="Currently being processed..." />{% else %}<a href="{% url webgcal.views.edit_website calendar.id website.id %}" title="Edit"><img src="{{ STATICFILES_URL }}icons/pencil.png" alt="Edit" /></a><a href="{% url webgcal.views.switch_website calendar.id website.id %}" title="{% if not website.enabled %}Enable{% else %}Disable{% endif %}"><img src="{{ STATICFILES_URL }}icons/{% if not website.enabled %}connect{% else %}disconnect{% endif %}.png" alt="{% if not website.enabled %}Enable{% else %}Disable{% endif %}" /></a><a href="{% url webgcal.views.delete_website_ask calendar.id website.id %}" title="Delete"><img src="{{ STATICFILES_URL }}icons/delete.png" alt="Delete" /></a>{% endif %}</td>
+        <td>{% if website.running %}<img src="{{ STATICFILES_URL }}icons/loading.gif" alt="{{ website.status }}" title="{{ website.status }}" />{% else %}<a href="{% url webgcal.views.edit_website calendar.id website.id %}" title="Edit"><img src="{{ STATICFILES_URL }}icons/pencil.png" alt="Edit" /></a><a href="{% url webgcal.views.switch_website calendar.id website.id %}" title="{% if not website.enabled %}Enable{% else %}Disable{% endif %}"><img src="{{ STATICFILES_URL }}icons/{% if not website.enabled %}connect{% else %}disconnect{% endif %}.png" alt="{% if not website.enabled %}Enable{% else %}Disable{% endif %}" /></a><a href="{% url webgcal.views.delete_website_ask calendar.id website.id %}" title="Delete"><img src="{{ STATICFILES_URL }}icons/delete.png" alt="Delete" /></a>{% endif %}</td>
       </tr>
       {% endfor %}
       {% else %}
@@ -84,9 +84,9 @@
       {% for calendar in calendars %}
       <tr {% if not calendar.enabled %}style="background: #fff8f8;"{% endif %}>
         <td>{{ calendar.name }}</td>
-        <td><a href="{% url webgcal.views.show_calendar calendar.id %}" title="Show">{{ calendar.websites.count }}</a></td>
+        <td><a href="{% url webgcal.views.show_calendar calendar.id %}" title="Show">{% if calendar.websites.count %}{{ calendar.websites.count }}{% else %}Add{% endif %} websites</a></td>
         <td>{% if calendar.update %}{{ calendar.update|localedatetime }}{% else %}None{% endif %}</td>
-        <td>{% if calendar.running %}<img src="{{ STATICFILES_URL }}icons/loading.gif" alt="Currently being processed..." />{% else %}<a href="{% url webgcal.views.edit_calendar calendar.id %}" title="Edit"><img src="{{ STATICFILES_URL }}icons/pencil.png" alt="Edit" /></a><a href="{% url webgcal.views.switch_calendar calendar.id %}" title="{% if not calendar.enabled %}Enable{% else %}Disable{% endif %}"><img src="{{ STATICFILES_URL }}icons/{% if not calendar.enabled %}connect{% else %}disconnect{% endif %}.png" alt="{% if not calendar.enabled %}Enable{% else %}Disable{% endif %}" /></a><a href="{% url webgcal.views.delete_calendar_ask calendar.id %}" title="Delete"><img src="{{ STATICFILES_URL }}icons/delete.png" alt="Delete" /></a>{% endif %}</td>
+        <td>{% if calendar.running %}<img src="{{ STATICFILES_URL }}icons/loading.gif" alt="{{ calendar.status }}" title="{{ calendar.status }}" />{% else %}<a href="{% url webgcal.views.edit_calendar calendar.id %}" title="Edit"><img src="{{ STATICFILES_URL }}icons/pencil.png" alt="Edit" /></a><a href="{% url webgcal.views.switch_calendar calendar.id %}" title="{% if not calendar.enabled %}Enable{% else %}Disable{% endif %}"><img src="{{ STATICFILES_URL }}icons/{% if not calendar.enabled %}connect{% else %}disconnect{% endif %}.png" alt="{% if not calendar.enabled %}Enable{% else %}Disable{% endif %}" /></a><a href="{% url webgcal.views.delete_calendar_ask calendar.id %}" title="Delete"><img src="{{ STATICFILES_URL }}icons/delete.png" alt="Delete" /></a>{% endif %}</td>
       </tr>
       {% endfor %}
     </tbody>
