Added small statistic to the home page

--- a/webgcal/templates/show_home.html
+++ b/webgcal/templates/show_home.html
@@ -9,4 +9,5 @@
 
 {% block content %}
   <p>This service allows you to add hCalendar events to your Google Calendar.</p>
+  <p>Currently syncing {{ calendars }} calendars with {{ websites }} websites.</p>
 {% endblock %}
