--- a/webgcal/templates/show_home.html
+++ b/webgcal/templates/show_home.html
@@ -10,4 +10,5 @@
 {% block content %}
   <p>This service allows you to add hCalendar events to your Google Calendar.</p>
   <p>Currently syncing {{ calendars }} calendars with {{ websites }} websites.</p>
+  <p>It's important that the websites you are going to add contain hCalendar events. You can check this using the <a href="https://chrome.google.com/webstore/detail/gmbgaklkmjakoegficnlkhebmhkjfich">Google Calendar extension for Chrome</a> or the <a href="https://addons.mozilla.org/en-US/firefox/addon/operator/">Operator addon for Firefox</a>.</p>
 {% endblock %}
