Added Kombu reference to footer

--- a/webgcal/templates/base.html
+++ b/webgcal/templates/base.html
@@ -43,6 +43,6 @@
 
 {% block footer %}
   <div id="footer">
-    Developed by <a href="http://www.marc-hoersken.de/" title="Marc H&ouml;rsken">Marc H&ouml;rsken</a> | Layout based on <a href="http://www.yaml.de">YAML</a> | Powered by <a href="http://www.djangoproject.com/">Django</a> and <a href="http://www.celeryproject.org/">Celery</a>
+    Developed by <a href="http://www.marc-hoersken.de/" title="Marc H&ouml;rsken">Marc H&ouml;rsken</a> | Layout based on <a href="http://www.yaml.de">YAML</a> | Powered by <a href="http://www.djangoproject.com/">Django</a>, <a href="http://www.celeryproject.org/">Celery</a> and <a href="http://pypi.python.org/pypi/kombu/">Kombu</a>
   </div>
 {% endblock %}
