--- a/webgcal/templates/show_home.html
+++ b/webgcal/templates/show_home.html
@@ -10,5 +10,10 @@
 {% block content %}
   <p>This service allows you to add hCalendar events to your Google Calendar.</p>
   <p>Currently syncing {{ calendars }} calendars with {{ websites }} websites for {{ users }} users.</p>
-  <p>It's important that the websites you are going to add contain hCalendar events. You can check this using the <a href="https://chrome.google.com/webstore/detail/gmbgaklkmjakoegficnlkhebmhkjfich">Google Calendar extension for Chrome</a> or the <a href="https://addons.mozilla.org/en-US/firefox/addon/operator/">Operator addon for Firefox</a>.</p>
+  <p>It's important that the websites you are going to add contain hCalendar events.
+  You can check this using the <a href="https://chrome.google.com/webstore/detail/gmbgaklkmjakoegficnlkhebmhkjfich">Google Calendar</a>
+  or <a href="https://chrome.google.com/webstore/detail/oalbifknmclbnmjlljdemhjjlkmppjjl">Microformats</a>
+  extensions for <a href="https://www.google.com/chrome/">Google Chrome</a> or
+  the <a href="https://addons.mozilla.org/firefox/addon/operator/">Operator</a>
+  addon for <a href="https://www.mozilla.org/firefox/">Mozilla Firefox</a>.</p>
 {% endblock %}
