--- a/webgcal/templates/show_dashboard.html
+++ b/webgcal/templates/show_dashboard.html
@@ -35,9 +35,8 @@
     <thead>
       <tr>
         <th scope="col">Name</th>
-        <th scope="col">Website</th>
         <th scope="col">Events</th>
-        <th scope="col">Last Update</th>
+        <th scope="col">Status</th>
         <th scope="col">Manage</th>
       </tr>
     </thead>
@@ -45,11 +44,10 @@
       {% if calendar.websites %}
       {% for website in calendar.websites %}
       <tr {% if not website.enabled %}style="background: #fff8f8;"{% endif %}>
-        <td>{{ website.name }}</td>
-        <td><a href="{{ website.href }}" title="{{ website.name }}" rel="nofollow">{{ website.href|slice:":40" }}</a> ...</td>
+        <td><a href="{{ website.href }}" title="{{ website.href }}" rel="nofollow">{{ website.name }}</a></td>
         <td>{{ website.events.count }}</td>
-        <td>{% if website.updated %}{{ website.updated|localedatetime }}{% else %}None{% endif %}</td>
-        <td>{% if website.running %}<img src="{{ STATIC_URL }}icons/loading.gif" alt="{{ website.status }}" title="{{ website.status }}" />{% else %}<a href="{% url webgcal.views.edit_website calendar.id website.id %}" title="Edit"><img src="{{ STATIC_URL }}icons/pencil.png" alt="Edit" /></a><a href="{% url webgcal.views.switch_website calendar.id website.id %}" title="{% if not website.enabled %}Enable{% else %}Disable{% endif %}"><img src="{{ STATIC_URL }}icons/{% if not website.enabled %}connect{% else %}disconnect{% endif %}.png" alt="{% if not website.enabled %}Enable{% else %}Disable{% endif %}" /></a><a href="{% url webgcal.views.delete_website_ask calendar.id website.id %}" title="Delete"><img src="{{ STATIC_URL }}icons/delete.png" alt="Delete" /></a>{% endif %}</td>
+        <td>{% if website.updated %}{{ website.updated|localedatetime }}{% else %}None{% endif %}<br />{{ website.status }}</td>
+        <td>{% if not website.running %}<a class="ym-button ym-edit" href="{% url webgcal.views.edit_website calendar.id website.id %}" title="Edit">Edit</a><a class="ym-button ym-spark" href="{% url webgcal.views.switch_website calendar.id website.id %}" title="{% if not website.enabled %}Enable{% else %}Disable{% endif %}">{% if not website.enabled %}Enable{% else %}Disable{% endif %}</a><a class="ym-button ym-delete" href="{% url webgcal.views.delete_website_ask calendar.id website.id %}" title="Delete">Delete</a>{% endif %}</td>
       </tr>
       {% endfor %}
       {% else %}
@@ -76,8 +74,7 @@
     <thead>
       <tr>
         <th scope="col">Name</th>
-        <th scope="col">Websites</th>
-        <th scope="col">Last Update</th>
+        <th scope="col">Status</th>
         <th scope="col">Manage</th>
       </tr>
     </thead>
@@ -85,9 +82,11 @@
       {% for calendar in calendars %}
       <tr {% if not calendar.enabled %}style="background: #fff8f8;"{% endif %}>
         <td>{{ calendar.name }}</td>
-        <td><a href="{% url webgcal.views.show_calendar calendar.id %}" title="Show">{% if calendar.websites.count %}{{ calendar.websites.count }}{% else %}Add{% endif %} websites</a></td>
-        <td>{% if calendar.updated %}{{ calendar.updated|localedatetime }}{% else %}None{% endif %}</td>
-        <td>{% if calendar.running %}<img src="{{ STATIC_URL }}icons/loading.gif" alt="{{ calendar.status }}" title="{{ calendar.status }}" />{% else %}<a href="{% url webgcal.views.edit_calendar calendar.id %}" title="Edit"><img src="{{ STATIC_URL }}icons/pencil.png" alt="Edit" /></a><a href="{% url webgcal.views.switch_calendar calendar.id %}" title="{% if not calendar.enabled %}Enable{% else %}Disable{% endif %}"><img src="{{ STATIC_URL }}icons/{% if not calendar.enabled %}connect{% else %}disconnect{% endif %}.png" alt="{% if not calendar.enabled %}Enable{% else %}Disable{% endif %}" /></a><a href="{% url webgcal.views.delete_calendar_ask calendar.id %}" title="Delete"><img src="{{ STATIC_URL }}icons/delete.png" alt="Delete" /></a>{% endif %}</td>
+        <td>{% if calendar.updated %}{{ calendar.updated|localedatetime }}{% else %}None{% endif %}<br />{{ calendar.status }}</td>
+        <td>
+          <a class="ym-button ym-next" href="{% url webgcal.views.show_calendar calendar.id %}" title="Show Websites">{% if calendar.websites.count %}{{ calendar.websites.count }}{% else %}Add{% endif %} Websites</a>
+          {% if not calendar.running %}<a class="ym-button ym-edit" href="{% url webgcal.views.edit_calendar calendar.id %}" title="Edit">Edit</a><a class="ym-button ym-spark" href="{% url webgcal.views.switch_calendar calendar.id %}" title="{% if not calendar.enabled %}Enable{% else %}Disable{% endif %}">{% if not calendar.enabled %}Enable{% else %}Disable{% endif %}</a><a class="ym-button ym-delete" href="{% url webgcal.views.delete_calendar_ask calendar.id %}" title="Delete">Delete</a>{% endif %}
+        </td>
       </tr>
       {% endfor %}
     </tbody>
